--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "shortly-api",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
